$densify range doesn't re-parse correctly

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.1, 7.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • v7.2
    • 175
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This ticket covers the densify failures in BF-30324.

       

      "Was not able to re-parse queryStats key when reading queryStats.Status FailedToParse: unknown time unit value: ? Hash: 15049953989640584350 Query Shape: { cmdNs: { db: \"test\", coll: \"full_range\" }, command: \"aggregate\", pipeline: [ { $sort: { val: 1 } }, { $_internalDensify: { field: \"val\", partitionByFields: [], range: { step: 1, bounds: \"full\", unit: \"?\" } } } ] }"} 

      Densify tests are failing in query_stats_aggregation_passthrough with the above. This appears to be due to RangeStatement serializing its "units" field as a literal, but expecting specific values on re-parse. 

            Assignee:
            Mariano Shaar
            Reporter:
            Alyssa Clark (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: