SERVER-81994 $densify range doesn't re-parse correctly